--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "run-s clean build:source",
     "build:source": "tsc",
     "clean": "rimraf dist",
+    "start": "npm run build && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,9 +29,18 @@
   },
   "homepage": "https://github.com/perry-mitchell/c01#readme",
   "devDependencies": {
+    "@types/minimist": "^1.2.5",
     "@types/node": "^20.11.19",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@fast-csv/parse": "^5.0.0",
+    "boxen": "^7.1.1",
+    "chalk": "^5.3.0",
+    "layerr": "^2.0.1",
+    "minimist": "^1.2.8",
+    "zod": "^3.22.4"
   }
 }
