--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "module": "es2020",
         "moduleResolution": "node",
         "outDir": "./dist",
+        "strictNullChecks": true,
         "target": "es2020"
     },
     "include": [
