--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/perry-mitchell/c01#readme",
   "devDependencies": {
+    "@types/inquirer": "^9.0.7",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.11.19",
     "npm-run-all": "^4.1.5",
@@ -40,6 +41,7 @@
     "@fast-csv/parse": "^5.0.0",
     "boxen": "^7.1.1",
     "chalk": "^5.3.0",
+    "inquirer": "^9.2.15",
     "layerr": "^2.0.1",
     "minimist": "^1.2.8",
     "zod": "^3.22.4"
