--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "run-s clean build:source",
+    "build": "run-s clean build:source make:executable",
     "build:source": "tsc",
     "clean": "rimraf dist",
+    "make:executable": "chmod +x ./dist/index.js",
     "start": "npm run build && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "books": "./dist/index.js"
   },
   "repository": {
     "type": "git",
