--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "files": [
     "dist/**/*"
   ],
-  "bin": "./dist/index.js",
+  "bin": {
+    "book-system": "./dist/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/perry-mitchell/c01.git"
