--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "make:executable": "chmod +x ./dist/index.js",
     "prepublishOnly": "npm run build",
     "start": "npm run build && node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "run-s build test:specs",
+    "test:specs": "c8 --check-coverage --lines 50 --functions 50 --statements 50 --branches 50 npm run test:specs:mocha",
+    "test:specs:mocha": "mocha 'test/specs/**/*.spec.js'"
   },
   "files": [
     "dist/**/*"
@@ -40,6 +42,9 @@
     "@types/inquirer": "^9.0.7",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.11.19",
+    "c8": "^9.1.0",
+    "chai": "^5.1.0",
+    "mocha": "^10.3.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
