--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "build": "run-s clean build:source make:executable",
     "build:source": "tsc",
     "clean": "rimraf dist",
+    "format": "prettier --write \"{source,test}/**/*.{ts,js}\"",
     "make:executable": "chmod +x ./dist/index.js",
+    "prepare": "simple-git-hooks",
+    "pre:commit": "lint-staged",
     "prepublishOnly": "npm run build",
     "start": "npm run build && node ./dist/index.js",
-    "test": "run-s build test:specs",
+    "test": "run-s build test:specs test:format",
+    "test:format": "prettier --check \"{source,test}/**/*.{ts,js}\"",
     "test:specs": "c8 --check-coverage --lines 50 --functions 50 --statements 50 --branches 50 npm run test:specs:mocha",
     "test:specs:mocha": "mocha 'test/specs/**/*.spec.js'"
+  },
+  "lint-staged": {
+    "{projects,scripts,test}/**/*.{ts,js,tsx,jsx}": [
+      "prettier --write"
+    ]
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npm run pre:commit"
   },
   "files": [
     "dist/**/*"
@@ -44,9 +56,12 @@
     "@types/node": "^20.11.19",
     "c8": "^9.1.0",
     "chai": "^5.1.0",
+    "lint-staged": "^15.2.2",
     "mocha": "^10.3.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
+    "simple-git-hooks": "^2.9.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
